--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.2.20"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vitejs/plugin-vue": "^1.9.3",
+    "vite": "^2.6.7"
   }
 }
